Añadido motivaciones y titulo de secciones

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,6 +1,6 @@
 \documentclass{memoriaPFC}
 
-\title{Integración de una herramienta de computo evolutivo y una de computación masiva de informacion}
+\title{IntegraciÃ³n de una herramienta de computo evolutivo y una de procesamiento masivo de informaciÃ³n}
 
 \autores{Daniel Lanza Garcia}{}
 
@@ -13,7 +13,6 @@
 
 \input{prologo.tex}
 \input{agradecimientos.tex}
-
 
 \begin{document}
 
@@ -32,15 +31,25 @@
 
 \mainmatter
 
-\chapter{Introduccion}
+\chapter{Introducci\'on}
+	\section{Motivaciones}
+		\input{motivaciones.tex}
+	\section{Objetivos}
+	\section{Recursos empleados}
+	\section{Organizaci\'on del documento}
 
-\chapter{Analisis previo}
+\chapter{An\'alisis del sistema}
+	\section{Introducci\'on}
+	\section{Algoritmos evolutivos}
+		\input{analisis-evolutivos.tex}
+	\section{Procesamiento masivo de informaci\'on}
+		\input{analisis-procesamiento-masivo.tex}
 
-\chapter{Analisis del sistema}
-
-\chapter{Diseno del sistema}
-
-\chapter{Implementacion}
+\chapter{Desarrollo del proyecto}
+	\section{Estudio de las herramientas a integrar}
+		\subsection{ECJ como herramienta de c\'omputo evolutivo}
+		\subsection{Hadoop como herramienta de procesamiento masivo de informaci\'on}
+	\section{Implementaci\'on}
 
 \chapter{Manual de usuario}
 
