Nueva funcion \insertaraclaracion y otras mejoras
- Conversion de ficheros a UTF-8 (para tildes)

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,6 +1,6 @@
 \documentclass{memoriaPFC}
 
-\title{Integración de una herramienta de computo evolutivo y una de procesamiento masivo de información}
+\title{Integración de una herramienta de computo evolutivo y una de procesamiento masivo de informaciÃ³n}
 
 \autores{Daniel Lanza Garcia}{}
 
@@ -13,6 +13,9 @@
 
 \input{prologo.tex}
 \input{agradecimientos.tex}
+
+%\usepackage{wrapfig}
+\usepackage[utf8]{inputenc}
 
 \begin{document}
 
@@ -52,6 +55,8 @@
 	\section{Implementaci\'on}
 
 \chapter{Manual de usuario}
+	\section{Compilaci\'on}
+		\input{manual-compilacion.tex}
 
 \chapter{Trabajos futuros}
 
