--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,8 +1,8 @@
-\documentclass{memoriaPFC}
+\documentclass{estilos-y-libreria}
 
-\title{Integración de una herramienta de computo evolutivo y una de procesamiento masivo de informaciÃ³n}
+\title{Integración de una herramienta de computo evolutivo y una de procesamiento masivo de informaci\'on}
 
-\autores{Daniel Lanza Garcia}{}
+\autores{Daniel Lanza Garc\'ia}{}
 
 \director{Francisco Fernandez de Vega}
 \directora{}
@@ -16,6 +16,9 @@
 
 %\usepackage{wrapfig}
 \usepackage[utf8]{inputenc}
+
+\usepackage{xcolor}
+\usepackage{listings}
 
 \begin{document}
 
@@ -55,6 +58,8 @@
 	\section{Implementaci\'on}
 
 \chapter{Manual de usuario}
+	\section{Obtenci\'on}
+		\input{manual-obtencion.tex}
 	\section{Compilaci\'on}
 		\input{manual-compilacion.tex}
 
@@ -62,12 +67,8 @@
 
 \chapter{Conclusiones}
 
-\chapter{Anexo I. Instalacion de herramientas, compilacion y ejecutables}
+\chapter{Anexo I. C\'odigo fuente}
 
-\chapter{Anexo II. Herramientas usadas durante el PFC}
-
-\chapter{Anexo III. Codigo fuente}
-
-\bibliografia{bibliogra}
+\bibliografia{bibliografia}
 
 \end{document}
