--- a/doc/manual-compilacion.tex
+++ b/doc/manual-compilacion.tex
@@ -1,9 +1,11 @@
 En esta sección se describe como 
 
 \insertaraclaracion{?`Qu\'e es Maven?}{
-	\ \ \ \ \ \ \ \ \ Esto es un ejemplo de cuadro de aclaracion. Esto es un ejemplo de cuadro de aclaracion. Esto es un ejemplo de cuadro de aclaracion. Esto es un ejemplo de cuadro de aclaracion. Esto es un ejemplo de cuadro de aclaracion. Esto es un ejemplo de cuadro de aclaracion. Esto es un ejemplo de cuadro de aclaracion.
-
-	\ \ \ \ \ \ \ \ \ Esto es un ejemplo.
+	\qquad Maven es una herramienta de software para la gestión y construcción de proyectos Java creada por Jason van Zyl, de Sonatype, en 2002. Tiene un modelo de configuración de construcción simple, basado en un formato XML. Es un proyecto de nivel superior de la Apache Software Foundation.
+	
+	\qquad Maven utiliza un Project Object Model (POM) para describir el proyecto de software a construir, sus dependencias de otros módulos y componentes externos, y el orden de construcción de los elementos. Viene con objetivos predefinidos para realizar ciertas tareas claramente definidas, como la compilación del código y su empaquetado.
+	
+	\qquad El motor incluido en su núcleo puede dinámicamente descargar plugins de un repositorio, el mismo repositorio que provee acceso a muchas versiones de diferentes proyectos. Este repositorio pugnan por ser el mecanismo de facto de distribución de aplicaciones en Java. Una caché local de artefactos actúa como la primera fuente para sincronizar la salida de los proyectos a un sistema local.
 }
 
 En esta seccion ...
