--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -9,3 +9,21 @@
    title = "{Articulo de la Wikipedia sobre Git}",
   url = {http://es.wikipedia.org/wiki/Git}
 }
+
+@webpage{eclipse,
+  key={eclipse},
+   title = "{Entorno de desarrollo Eclipse}",
+  url = {https://eclipse.org/}
+}
+
+@webpage{instalacion_maven,
+  key={instalacion_maven},
+   title = "{Procedimientos para la instalación de Maven}",
+  url = {https://eljaviador.wordpress.com/2013/05/21/guia-de-instalacion-de-maven/}
+}
+
+@webpage{instalacion_git,
+  key={instalacion_git},
+   title = "{Procedimientos para la instalación de Git}",
+  url = {http://symfony.es/documentacion/guia-de-instalacion-de-git/}
+}
