--- a/doc/main.tex
+++ b/doc/main.tex
@@ -60,6 +60,8 @@
 \chapter{Manual de usuario}
 	\section{Obtenci\'on}
 		\input{manual-obtencion.tex}
+	\section{Importar a entorno de desarrollo}
+		\input{manual-importar-a-ide.tex}
 	\section{Compilaci\'on}
 		\input{manual-compilacion.tex}
 
