--- a/doc/manual-obtencion.tex
+++ b/doc/manual-obtencion.tex
@@ -17,7 +17,11 @@ Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de
 
 El proyecto se puede encontrar a través del buscador del sitio buscando "ecj\_hadoop", o accediendo directamente al repositorio siguiendo esta dirección: \url{https://github.com/dlanza1/ecj_hadoop} . Una vez en el repositorio, el proyecto se puede obtener de dos formas, una es pulsando en el botón "Download ZIP" (situado en la columna de la derecha), y una vez descargado descomprimir el fichero, y la otra es clonar el repositorio con Git (crear un repositorio igual de forma local).
 
-Para clonar el repositorio con Git se debe tener instalada esta herramienta en el sistema o utilizar un entorno de desarrollo como Eclipse, el cual la trae incluida. Para clonarlo desde un entorno de desarrollo como Eclipse el procedimiento suele ser el de importar un proyecto pero con la diferencia de que se debe indicar que la fuente es un repositorio Git, nos solicitar\'a el repositorio que queremos clonar y es ah\'i donde debemos escribir la URL del repositorio. Si de otro modo, tenemos la herramienta instalada en el sistema, debemos en primer lugar abrir una consola, posteriormente dirigirnos al directorio donde queremos crear el repositorio local y por \'ultimo clonar el repositorio con el siguiente comando:
+Para clonar el repositorio con Git se debe tener instalada esta herramienta en el sistema \cite{instalacion_git} o utilizar un entorno de desarrollo como Eclipse, el cual la trae incluida. 
+
+Para clonarlo desde un entorno de desarrollo como Eclipse \cite{eclipse} el procedimiento suele ser el de importar un proyecto pero con la diferencia de que se debe indicar que la fuente es un repositorio Git, nos solicitar\'a el repositorio que queremos clonar y es ah\'i donde debemos escribir la URL del repositorio. Algo que debe ser aclarado es que esta operación crear\'a un repositorio local, no genera el proyecto en el entorno de desarrollo, lo cual se explica en la sección siguiente.
+
+Si de otro modo, tenemos la herramienta instalada en el sistema, debemos en primer lugar abrir una consola, posteriormente dirigirnos al directorio donde queremos crear el repositorio local y por \'ultimo clonar el repositorio con el siguiente comando:
 
 \mostrarconsola{
 	[usu@host repo]\$ git clone https://github.com/dlanza1/ecj\_hadoop
