--- a/doc/main.tex
+++ b/doc/main.tex
@@ -38,14 +38,14 @@
 \mainmatter
 
 \chapter{Introducci\'on}
-	\section{Motivaciones}
+	\section{Motivaciones\label{motivaciones}}
 		\input{motivaciones.tex}
 	\section{Objetivos}
 	\section{Recursos empleados}
 	\section{Organizaci\'on del documento}
 
 \chapter{An\'alisis del sistema}
-	\section{Introducci\'on}
+	\input{analisis-introcuccion.tex}
 	\section{Algoritmos evolutivos}
 		\input{analisis-evolutivos.tex}
 	\section{Procesamiento masivo de informaci\'on}
@@ -53,7 +53,7 @@
 
 \chapter{Desarrollo del proyecto}
 	\section{Estudio de las herramientas a integrar}
-		\subsection{ECJ como herramienta de c\'omputo evolutivo}
+		\subsection{ECJ como herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
 		\subsection{Hadoop como herramienta de procesamiento masivo de informaci\'on}
 	\section{Implementaci\'on}
 
