--- a/doc/main.tex
+++ b/doc/main.tex
@@ -52,9 +52,9 @@
 		\input{analisis-procesamiento-masivo.tex}
 
 \chapter{Desarrollo del proyecto}
-	\section{Estudio de las herramientas a integrar}
-		\subsection{ECJ como herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
-		\subsection{Hadoop como herramienta de procesamiento masivo de informaci\'on}
+	\section{Estudio de ECJ, herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
+	\section{Estudio de Hadoop, herramienta de procesamiento masivo de informaci\'on\label{desarrollo-hadoop}}
+		\input{desarrollo-hadoop.tex}
 	\section{Implementaci\'on}
 
 \chapter{Manual de usuario}
