--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -4,10 +4,26 @@
   url = {http://es.wikipedia.org/wiki/Maven}
 }
 
-@webpage{wiki_git,
-  key={wiki_git},
-   title = "{Articulo de la Wikipedia sobre Git}",
-  url = {http://es.wikipedia.org/wiki/Git}
+@webpage{
+	wiki_git,
+	key={wiki_git},
+	title = "{Articulo de la Wikipedia sobre Git}",
+	url = {http://es.wikipedia.org/wiki/Git}
+}
+
+@article{
+	paper-mapreduce,
+	key={paper-mapreduce},
+	author = {Jeffrey Dean and Sanjay Ghemawat},
+	year = 2004,
+	title = {MapReduce: Simplified Data Processing on Large Clusters},
+	journal = {Google, Inc.}
+}
+
+@webpage{hadoop,
+  key={hadoop},
+   title = "{Apache Hadoop}",
+  url = {http://hadoop.apache.org/}
 }
 
 @webpage{eclipse,
