--- a/doc/analisis-evolutivos.tex
+++ b/doc/analisis-evolutivos.tex
@@ -37,7 +37,7 @@ Con el fin de entender mejor este proceso, se muestra una imagen \ver{fases-evol
 
 Varias herramientas han surgido en la comunidad para ayudar a la investigación de este modelo, en difierentes lenguajes de programación y plataformas. En nuestro caso hemos elegido ECJ que es un framework bien conocido por la comunidad, implementado en el lenguaje de programación Java y que posee una flexibilidad importante para la ejecución de problemas de muy distinta naturaliza. M\'as adelante \verapartado{desarrollo-ecj} se describe con m\'as detalle esta herramienta, explicando su funcionamiento e implementación.
 
-\subsection{Paralelizaci\'on}
+\subsection{Paralelizaci\'on\label{analisis-evolutivos-paralelizacion}}
 
 Como hemos comentado anteriormente \verapartado{motivaciones} este proyecto surge de la necesidad de optimizar el uso de recursos cuando se intentan resolver problemas complejos con este modelo. Con este fin, y con la posibilidad de paralizar el procesamiento de algunas de las partes del proceso, surge la viabilidad de este proyecto.
 
