--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -1,45 +1,61 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Daniel Lanza García at 2015-03-18 21:59:34 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{paper-gfs,
+	Author = {Sanjay Ghemawat and Howard Gobioff and Shun-Tak Leung},
+	Date-Added = {2015-03-18 20:57:34 +0000},
+	Date-Modified = {2015-03-18 20:59:22 +0000},
+	Journal = {Google, Inc.},
+	Title = {The Google File System},
+	Year = {2003}}
+
 @webpage{wiki_maven,
-  key={wiki_maven},
-   title = "{Articulo de la Wikipedia sobre Maven}",
-  url = {http://es.wikipedia.org/wiki/Maven}
-}
+	Key = {wiki_maven},
+	Title = {{Articulo de la Wikipedia sobre Maven}},
+	Url = {http://es.wikipedia.org/wiki/Maven},
+	Bdsk-Url-1 = {http://es.wikipedia.org/wiki/Maven}}
 
-@webpage{
-	wiki_git,
-	key={wiki_git},
-	title = "{Articulo de la Wikipedia sobre Git}",
-	url = {http://es.wikipedia.org/wiki/Git}
-}
+@webpage{wiki_git,
+	Key = {wiki_git},
+	Title = {{Articulo de la Wikipedia sobre Git}},
+	Url = {http://es.wikipedia.org/wiki/Git},
+	Bdsk-Url-1 = {http://es.wikipedia.org/wiki/Git}}
 
-@article{
-	paper-mapreduce,
-	key={paper-mapreduce},
-	author = {Jeffrey Dean and Sanjay Ghemawat},
-	year = 2004,
-	title = {MapReduce: Simplified Data Processing on Large Clusters},
-	journal = {Google, Inc.}
-}
+@article{paper-mapreduce,
+	Author = {Jeffrey Dean and Sanjay Ghemawat},
+	Journal = {Google, Inc.},
+	Key = {paper-mapreduce},
+	Title = {MapReduce: Simplified Data Processing on Large Clusters},
+	Year = 2004}
 
 @webpage{hadoop,
-  key={hadoop},
-   title = "{Apache Hadoop}",
-  url = {http://hadoop.apache.org/}
-}
+	Key = {hadoop},
+	Title = {{Apache Hadoop}},
+	Url = {http://hadoop.apache.org/},
+	Bdsk-Url-1 = {http://hadoop.apache.org/}}
 
 @webpage{eclipse,
-  key={eclipse},
-   title = "{Entorno de desarrollo Eclipse}",
-  url = {https://eclipse.org/}
-}
+	Key = {eclipse},
+	Title = {{Entorno de desarrollo Eclipse}},
+	Url = {https://eclipse.org/},
+	Bdsk-Url-1 = {https://eclipse.org/}}
 
 @webpage{instalacion_maven,
-  key={instalacion_maven},
-   title = "{Procedimientos para la instalación de Maven}",
-  url = {https://eljaviador.wordpress.com/2013/05/21/guia-de-instalacion-de-maven/}
-}
+	Key = {instalacion_maven},
+	Title = {{Procedimientos para la instalaci{\'o}n de Maven}},
+	Url = {https://eljaviador.wordpress.com/2013/05/21/guia-de-instalacion-de-maven/},
+	Bdsk-Url-1 = {https://eljaviador.wordpress.com/2013/05/21/guia-de-instalacion-de-maven/}}
 
 @webpage{instalacion_git,
-  key={instalacion_git},
-   title = "{Procedimientos para la instalación de Git}",
-  url = {http://symfony.es/documentacion/guia-de-instalacion-de-git/}
-}
+	Key = {instalacion_git},
+	Title = {{Procedimientos para la instalaci{\'o}n de Git}},
+	Url = {http://symfony.es/documentacion/guia-de-instalacion-de-git/},
+	Bdsk-Url-1 = {http://symfony.es/documentacion/guia-de-instalacion-de-git/}}
