--- a/doc/main.tex
+++ b/doc/main.tex
@@ -52,7 +52,9 @@
 		\input{analisis-procesamiento-masivo.tex}
 
 \chapter{Desarrollo del proyecto}
+	\input{desarrollo-introduccion.tex}
 	\section{Estudio de ECJ, herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
+		\input{desarrollo-ecj.tex}
 	\section{Estudio de Hadoop, herramienta de procesamiento masivo de informaci\'on\label{desarrollo-hadoop}}
 		\input{desarrollo-hadoop.tex}
 	\section{Implementaci\'on}
