--- a/doc/manual-obtencion.tex
+++ b/doc/manual-obtencion.tex
@@ -15,7 +15,7 @@ Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de
 	\end{itemize}
 }
 
-El proyecto se puede encontrar a través del buscador del sitio buscando ''ecj\_hadoop", o accediendo directamente al repositorio siguiendo esta dirección: \url{https://github.com/dlanza1/ecj_hadoop} . Una vez en el repositorio, el proyecto se puede obtener de dos formas, una es pulsando en el botón "Download ZIP" (situado en la columna de la derecha), y una vez descargado descomprimir el fichero, y la otra es clonar el repositorio con Git (crear un repositorio igual de forma local).
+El proyecto se puede encontrar a través del buscador del sitio escribiendo ''ecj\_hadoop", o accediendo directamente al repositorio siguiendo esta dirección: \url{https://github.com/dlanza1/ecj_hadoop} . Una vez en el repositorio, el proyecto se puede obtener de dos formas, una es pulsando en el botón "Download ZIP" (situado en la columna de la derecha), y una vez descargado descomprimir el fichero, y la otra es clonar el repositorio con Git (crear un repositorio igual de forma local).
 
 Para clonar el repositorio con Git se debe tener instalada esta herramienta en el sistema \cite{instalacion_git} o utilizar un entorno de desarrollo como Eclipse, el cual la trae incluida. 
 
