--- a/doc/main.tex
+++ b/doc/main.tex
@@ -58,6 +58,7 @@
 	\section{Estudio de Hadoop, herramienta de procesamiento masivo de informaci\'on\label{desarrollo-hadoop}}
 		\input{desarrollo-hadoop.tex}
 	\section{Implementaci\'on}
+		\input{desarrollo-implementacion.tex}
 
 \chapter{Manual de usuario}
 	\section{Obtenci\'on}
