Documentacion: anadido desarrollo-problema-maxone

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -59,6 +59,8 @@
 		\input{desarrollo-hadoop.tex}
 	\section{Implementaci\'on}
 		\input{desarrollo-implementacion.tex}
+	\section{Despliegue de un problema sencillo, MaxOne}
+		\input{desarrollo-problema-maxone.tex}
 
 \chapter{Manual de usuario}
 	\section{Obtenci\'on}
@@ -67,6 +69,9 @@
 		\input{manual-importar-a-ide.tex}
 	\section{Compilaci\'on}
 		\input{manual-compilacion.tex}
+
+\chapter{Resultados}
+	\label{resultados-maxone}
 
 \chapter{Trabajos futuros}
 
